Altera redirecionamento para permitir leitura do arquivo do app mobile #2

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
     <head>
-        <meta http-equiv="refresh" content="0; url=ftsl10/">
         <title>FTSL</title>
+	<script type="text/javascript">
+	if (window.location.href == 'http://ftsl.org.br' || window.location.href == 'http://ftsl.org.br/') {
+		window.location.assign('http://ftsl.org.br/ftsl10');
+	}
+	</script>	
     </head>
     <body>
         <p>Se o seu navegador n&atilde;o o redirecionar em alguns segundos, acesse: <a href="ftsl10/">ftsl10</a></p>
